# ML-FFNN

./: .pre-commit-config.yaml  Makefile  README.md  setup.bat  setup.sh
scripts/: nbstripout-hook.sh
src/: README.md  pyproject.toml  spec.md
src/core/: __init__.py  activations.py  autograd.py  initializers.py  layers.py  layers_autograd.py  losses.py  network.py  network_autograd.py
src/data/: datasetml_2026.csv
src/models/: dataset.py  model.py
src/notebooks/: extra.ipynb  main-autograd.ipynb  main.ipynb
src/utils/: activation_function.py  loss_function.py
